--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -51,9 +51,7 @@ services:
     container_name: esports_nginx_lb
     restart: unless-stopped
     volumes:
-      - ./docker/nginx-production.conf:/etc/nginx/nginx.conf:ro
-      - ./ssl:/etc/nginx/ssl:ro
-      - /var/log/nginx:/var/log/nginx
+      - ./docker/nginx-simple.conf:/etc/nginx/nginx.conf:ro
     ports:
       - "80:80"
       - "443:443"
